# automotive-diagnostic-skills

./: .env.example  .gitattributes  .gitignore  .mcp.json  .mcp.json.disabled  BATCH_4_COMPLETION_SUMMARY.md  CLAUDE.md  COMPLETE_DIAGNOSTIC_TEMPLATE.md  DATABASE_IMPLEMENTATION_STATUS.md  DATA_ASSETS_SUMMARY.md  FRONTEND_INTEGRATION_COMPLETE.md  HOW_TO_STAY_SAFE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_SETUP.md  MVP_SCOPE_DEFINITION.md  NEXT_SESSION_PRIORITIES.md  PROJECT_STATUS.md  README.md  SAFE_BACKUP.bat  SCRAPING_STRATEGIES.md  SHOP_SETUP.md  backfill_historical.py  check_total_questions.py  debug_processing.py  deduplicate_data.py  diagnose_api.py  docker-compose.firecrawl.yml  mypy.ini  pyproject.toml  requirements.txt  run_scraper_simple.py  scrape_incremental.py  setup.sh  start_claude_remote.bat  start_claude_remote.sh  start_cyberpunk_ui.bat  start_full_ui_system.bat  tasks.py  test_file.txt
.claude/: FINAL_FIX_SUMMARY.md  GEMINI_MCP_VALIDATION_REPORT.md  GEMINI_PAID_TIER_VALIDATION.md  LINTING_ERRORS_TODO.md  RESTART_INSTRUCTIONS.md  SCHEMA_COMPATIBILITY_ISSUE.md  SESSION_2026-02-13_GEMINI_INTEGRATION.md  settings.json  settings.local.json  test_gemini_mcp.sh  validation_criteria_gemini_mcp.md
.harness/: current-plan.json
data/: ingested_videos_manifest.jsonl  platform_families.yaml  transmission_lookup.yaml
database/: automotive_diagnostics.db  import_all_vehicles.py  import_dtc_codes.py  import_epa_vehicles.py  import_failure_data.py  import_vehicles.py  init_database.py  init_database_simple.py  schema.sql  schema_new_sources.sql  schema_nhtsa_tsbs.sql  (+1 more)
(+362 files in other folders)
